--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,7 @@
 </head>
 
 <body>
-	<canvas id="canvas" width="310" height="310"></canvas>
-    
+	<canvas id="canvas"></canvas>
 </body>
 
 </html>
