--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,17 @@
 
 <head>
     <title>jsFlag</title>
+    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script type="text/javascript" src="main.js"></script>
+    <link href="styles.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
 	<canvas id="canvas"></canvas>
+	<div id="selectionBoard">
+		<div id="button-wrapper"></div>
+	</div>
 </body>
 
 </html>
