the tanks can shoot

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,10 @@
 </head>
 
 <body>
-	<canvas id="canvas"></canvas>
+	<canvas id="canvas">
+		Your browser does not support canvas. Please try again with a different browser.
+	</canvas>
+	<canvas id="background"></canvas>
 	<div id="selectionBoard">
 		<div id="button-wrapper"></div>
 	</div>
