--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <title>jsFlag</title>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.4/socket.io.js"></script>
-    <script type="text/javascript" src="main.js"></script>
+		<script type="text/javascript" src="base64Images.js"></script>
+		<script type="text/javascript" src="main.js"></script>
     <link href="styles.css" type="text/css" rel="stylesheet">
 </head>
 
