--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <title>jsFlag</title>
     <script src="jquery-2.2.4.min.js"></script>
     <script src="socket.io.js"></script>
-		<script type="text/javascript" src="base64Images.js"></script>
+		<script type="text/javascript" src="base64images.js"></script>
 		<script type="text/javascript" src="main.js"></script>
     <link href="styles.css" type="text/css" rel="stylesheet">
 </head>
