--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,12 @@
 	<div id="selectionBoard">
 		<div id="button-wrapper"></div>
 	</div>
+	<ul class="instructions">
+		<li>Select tanks by pushing keys 1-4</li>
+		<li>Move selected tank by left clicking anywhere</li>
+		<li>Selected tanks fire when you push space</li>
+		<li>Objective: return other color flag to your base</li>
+	</ul>
 </body>
 
 </html>
