fixed position of instructions

--- a/public/index.html
+++ b/public/index.html
@@ -14,16 +14,21 @@
 	<canvas id="canvas">
 		Your browser does not support canvas. Please try again with a different browser.
 	</canvas>
-	<canvas id="background"></canvas>
+	<canvas id="background">
+		
+	</canvas>
+	<div id="foundation">
+
+	</div>
+	<ul class="instructions">
+			<li>Select tanks by pushing keys 1-4.</li>
+			<li>Move selected tank by left clicking anywhere.</li>
+			<li>Selected tanks fire when you push space.</li>
+			<li>Objective: return other color flag to your base.</li>
+		</ul>
 	<div id="selectionBoard">
 		<div id="button-wrapper"></div>
 	</div>
-	<ul class="instructions">
-		<li>Select tanks by pushing keys 1-4</li>
-		<li>Move selected tank by left clicking anywhere</li>
-		<li>Selected tanks fire when you push space</li>
-		<li>Objective: return other color flag to your base</li>
-	</ul>
 </body>
 
 </html>
